# embedded_project_for_learning

./: .gitignore  .mxproject  CMakeLists.txt  Makefile  README.md  openocd.cfg  run.sh
.devcontainer/: devcontainer.json
Core/Inc/: MFRC522.h  app_accelerometer.h  app_card_reader_spi.h  app_general.h  app_uart_hw1.h  cli_parser.h  hw_drivers.h
Core/Src/: MFRC522.c  app_accelerometer.c  app_card_reader_spi.c  app_ledblink.c  app_uart_hw1.c  cli_parser.c  hw_drivers.c  main.c  retarget.c  stm32f4xx_hal_msp.c
Drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal_gpio.c
Projects/TEST/Src/: main.c
Projects/prj01_cli_parser/Src/: app_game01.c
Projects/prj02_mutex/Inc/: app_general.h  hw_drivers.h
Projects/prj02_mutex/Src/: app_accelerometer.c  hw_drivers.c
Projects/prj03_i2c_acc/Inc/: adxl345_i2c.h
Projects/prj03_i2c_acc/Src/: stm32f4xx_hal_msp.c
Projects/prj04_rfid_spi/Inc/: app_RFID.h  main.h
Projects/prj04_rfid_spi/Src/: app_RFID.c  app_general.c  main.c
Projects/prj05_mutex/Src/: app_general.c  cli_parser.c  hw_drivers.c
Projects/prj06_7segment/Src/: main.c
Projects/prj06_keypad/Inc/: read_key.h  retarget.h
Projects/prj06_keypad/Src/: main.c  read_key.c
Projects/prj06_keypad_f/Inc/: read.keypad.h
Projects/prj06_keypad_f/Src/: main.c  read.keypad.c
Projects/prj06_simple_code/Src/: main.c
Projects/prj07.02_timer/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
Projects/prj07_simple_code/Src/: main.c
Projects/prj07_timer/Inc/: main.h
Projects/prj07_timer/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
Projects/prj07_timer7segment/Inc/: stm32f4xx_it.h
Projects/prj07_timer7segment/Src/: main.c  stm32f4xx_it.c
Projects/prj07_timer_7segment1/Src/: main.c
Projects/prj07_timer_led/Inc/: main.h
Projects/prj07_timer_led/Src/: main.c
Projects/prj08.push_button/Src/: main.c
Projects/prj08_double_click/Src/: main.c
Projects/prj08_doublr_click/Src/: main.c
Projects/prj08_led_blink/Src/: main.c
Projects/prj08_simple_code.f/Src/: main.c
Projects/prj09_lcd/: readme.md
Projects/prj09_lcd/Inc/: main.h  stm32f4xx_hal_conf.h
Projects/prj09_lcd/Src/: stm32f4xx_hal_msp.c
Projects/prj09_lcd/User/Config/: DEV_Config.h
Projects/prj09_lcd/User/example/: LCD_2inch4_test.c
Projects/prj11_badmoodcounter/Inc/: GPIO.h  Timer.h  UART.h  lcd.h  main.h
Projects/prj11_badmoodcounter/Src/: GPIO.c  Timer.c  UART.c  lcd.c  main.c  spi.c  stm32f4xx_hal_msp.c
Projects/prj11_badmoodcounter/User/example/: LCD_2inch4_test.c
Projects/prj11_badmoodcounter/notes/: 2023nov03.md  note01_31oct2023.md  note20231102.md  note20231105.md
Projects/prj12_badmoodcounter/Src/: main.c
Projects/prj13_lcd/User/example/: LCD_2inch4_test.c
Projects/prj14_badmoodcounter/Inc/: stm32f4xx_hal_conf.h
Projects/prj14_badmoodcounter/Src/: Timer.c  lcd.c  main.c  spi.c
Projects/prj14_badmoodcounter_RTC/Inc/: UART.h  main.h  stm32f4xx_hal_conf.h
Projects/prj14_badmoodcounter_RTC/Src/: main.c  stm32f4xx_hal_msp.c
Projects/prj14_badmoodcounter_RTC/User/Config/: DEV_Config.h
Projects/prj14_badmoodcounter_RTC/User/example/: LCD_2inch_test.c
Projects/prj14_badmoodcounter_RTC/notes/: note20231108.md
Projects/prj15_badmoodcounter_RTC/Src/: Timer.c  main.c
Projects/prj16_LCD_RTC/Inc/: stm32f4xx_hal_conf.h
Projects/prj16_LCD_RTC/Src/: main.c
Projects/prj16_farya_original/Inc/: main.h
Projects/prj16_farya_original/Src/: main.c
Projects/prj17_LCD_RTC_Timer/Inc/: lcd.h  main.h
Projects/prj17_LCD_RTC_Timer/Src/: lcd.c
Projects/prj17_LCD_RTC_Timer/lcd_driver/example/: LCD_2inch4_test.c
Projects/prj18_badmoodcounter_newcode/: badmood.c
Projects/prj18_badmoodcounter_newcode/Inc/: timer.h
Projects/prj18_badmoodcounter_newcode/Src/: main.c
Projects/prj19_badmoodcounter_newcode/Inc/: badmood.h
Projects/prj19_badmoodcounter_newcode/Src/: badmood.c  stm32f4xx_hal_msp.c
doc/: Makefile  links.md
doc/examples/: readme.md
doc/examples/codes/lcd/: readme.md
doc/materials/74HC595/: links.txt
nucleo-c031c6/: CMakeLists.txt  openocd.cfg  run.sh
nucleo-c031c6/Drivers/STM32C0xx_HAL_Driver/: Release_Notes.html
nucleo-c031c6/Projects/prj01/Src/: main.c  stm32c0xx_hal_msp.c
nucleo-f446re/Projects/RTC_TEST/Src/: main.c
nucleo-f446re/Projects/prj02_mutex/Inc/: app_game01.h  app_ledblink.h
nucleo-f446re/Projects/prj03_i2c_acc/Inc/: main.h
nucleo-f446re/Projects/prj03_i2c_acc/Src/: adxl345_i2c.c  main.c
nucleo-f446re/Projects/prj04_rfid_spi/Inc/: MFRC522.h  app_general.h
nucleo-f446re/Projects/prj04_rfid_spi/Src/: MFRC522.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
nucleo-f446re/Projects/prj05_mutex/Src/: main.c  stm32f4xx_hal_msp.c
nucleo-f446re/Projects/prj06_4digit_7seg/Src/: main.c  stm32f4xx_it.c
nucleo-f446re/Projects/prj06_ADC/: readme.md
nucleo-f446re/Projects/prj06_ADC/Src/: main.c  stm32f4xx_hal_msp.c
nucleo-f446re/Projects/prj06_LCD/Inc/: main.h
nucleo-f446re/Projects/prj06_LCD/Src/: main.c
nucleo-f446re/Projects/prj06_LCD1/Src/: main.c
nucleo-f446re/Projects/prj06_LCD_IIC/Inc/: fonts.h  main.h  ssd1306.h
nucleo-f446re/Projects/prj06_LCD_IIC/Src/: main.c
nucleo-f446re/Projects/prj06_LCD_SPI/Inc/: GFX_FUNCTIONS.h  ST7735.h  main.h
nucleo-f446re/Projects/prj06_LCD_SPI/Src/: GFX_FUNCTIONS.c  main.c
nucleo-f446re/Projects/prj06_LCD_SPI/notes/: 16_nov2023.md
nucleo-f446re/Projects/prj06_LCD_SPI_FONT/Src/: ST7735.c  main.c  stm32f4xx_hal_msp.c
nucleo-f446re/Projects/prj06_LCD_scroll/Src/: main.c
nucleo-f446re/Projects/prj06_PWM.dma/Src/: main.c
nucleo-f446re/Projects/prj06_PWM/Src/: main.c
nucleo-f446re/Projects/prj06_RTC/Inc/: main.h
nucleo-f446re/Projects/prj06_RTC/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
nucleo-f446re/Projects/prj06_SPI/: README.md
nucleo-f446re/Projects/prj06_countup/: readme.md
nucleo-f446re/Projects/prj06_fan_term_tim/: READme.md  note.md
nucleo-f446re/Projects/prj06_fan_termo.f/: ReadMe.md
nucleo-f446re/Projects/prj07_timer_9/: readme.md
tools/docker/: Dockerfile  readme.md
tools/docker/for_linux/: docker-compose.yml
tools/docker/for_windows/: docker-compose.yml
(+92 files in other folders)
